[project]
name = "openlist-api"
version = "0.1.0"
description = "A feature-complete Python client library for interacting with the OpenList (AList) API."
readme = "README.md"
authors = [
    { name = "ailearncoder", email = "ailearncoder8@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.3",
    "requests>=2.32.5",
]

[project.scripts]
openlist-api = "openlist_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "rich>=14.2.0",
]
